<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.otc.application.activity.ui.beranda.BerandaFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_pembelian"
        android:name="com.otc.application.activity.ui.pembelian.PembelianFragment"
        android:label="@string/pembelian"
        tools:layout="@layout/fragment_pembelian" />

    <fragment
        android:id="@+id/navigation_notifikasi"
        android:name="com.otc.application.activity.ui.notifications.NotifikasiFragment"
        android:label="@string/notifikasi"
        tools:layout="@layout/fragment_notifikasi" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.otc.application.activity.ui.akun.AkunFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun" />
</navigation>
