<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivitySignIn"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/imageViewSiapUntukMenjadiMedalist"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ready_to_be_a_medalist_logo"
            android:scaleType="fitXY"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textViewSiapUntukMenjadiMedalist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siap_untuk_menjadi_medalist"
            android:textColor="@color/light_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSiapUntukMenjadiMedalist"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_full_rounded_shadow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSiapUntukMenjadiMedalist"
            android:layout_margin="20dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textViewBelumPunyaAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun_ayo_daftar"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMasuk"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAlamatEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewBelumPunyaAkun"
                android:layout_marginTop="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:hintTextAppearance="@style/HintInputTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextAlamatEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_email"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutKataSandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAlamatEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@style/HintInputTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextKataSandi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:hint="@string/kata_sandi"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewLupaKataSandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKataSandi"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/masukButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:background="@drawable/rectangle_orange_full_rounded_5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textViewLupaKataSandi"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewTrademarkOTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trademark_otc"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBox"
            android:layout_marginTop="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>