<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityHome"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/light_chocolate"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cariTextInputEditText"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/rectangel_white_half_rounded"
            android:hint="@string/cari"
            android:drawableLeft="@drawable/ic_search_dark_grey_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/filterButton"
            android:padding="10dp"
            android:drawablePadding="10dp">
        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/filterButton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangle_dark_grey_half_rounded"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_arrow_drop_down_white_24dp"
            android:paddingRight="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_white_full_rounded_shadow"
        android:padding="15dp">

        <TextView
            android:id="@+id/namaPenggunaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hanya_test"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/namaSekolahTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namaPenggunaTextView"
            android:text="@string/hanya_test"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="3dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/namaSekolahTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/light_orange"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/jenisAkunTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/namaSekolahTextView"
            android:text="@string/hanya_test"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_round_light_orange_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/programTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/program"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programTextView"
        android:id="@+id/programRecylerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_program" />

</androidx.constraintlayout.widget.ConstraintLayout>